hphp/hack/test/typecheck/constraint_gen_fail2.php.like_types.exp
File "constraint_gen_fail2.php", line 21, characters 7-12:
Invalid argument (Typing[4110])
File "constraint_gen_fail2.php", line 16, characters 22-22:
Expected ~[unresolved] because it is an unenforceable type
File "constraint_gen_fail2.php", line 21, characters 7-12:
But got string
